platform/argocd/foundations/f435d127-3032-4f07-bf82-cb0400a1cfb8.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-qa-feature-test-staging-qa
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f435d127-3032-4f07-bf82-cb0400a1cfb8
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: bb2ac9ec-545f-46ec-9372-0774fc770769
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-qa-feature-test-staging-qa
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f435d127-3032-4f07-bf82-cb0400a1cfb8
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: bb2ac9ec-545f-46ec-9372-0774fc770769
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-qa-feature-test-staging-qa
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f435d127-3032-4f07-bf82-cb0400a1cfb8
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: bb2ac9ec-545f-46ec-9372-0774fc770769
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-qa-feature-test-staging-qa
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f435d127-3032-4f07-bf82-cb0400a1cfb8
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: bb2ac9ec-545f-46ec-9372-0774fc770769
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
